fix: prevent layout break on progress indicator
When screen's width is really small.

--- a/frontend/src/assets/styles/global.scss
+++ b/frontend/src/assets/styles/global.scss
@@ -173,6 +173,10 @@ cds-progress-step::part(cds--progress-label) {
   padding-right: 0.5rem;
 }
 
+cds-progress-step[vertical]::part(cds--progress-label) {
+  padding-right: 0;
+}
+
 cds-progress-step::part(cds--progress-label):hover {
   box-shadow: none;
   color: unset;
